[package]
name = "eggtimer"
version = "0.4.0"
authors = ["Kai Schmidt <kaikaliischmidt@gmail.com>"]
edition = "2018"
categories = ["date-and-time"]
description = "Timer types for measuring time in a program in different ways"
documentation = "https://docs.rs/eggtimer/"
keywords = [
    "timer",
    "time",
    "duration"
]
license = "MIT"
readme = "readme.md"
